--- a/ET.org
+++ b/ET.org
@@ -1779,6 +1779,22 @@ public class GetAllConfigBytes: AInvokeHandler<ConfigComponent.GetAllConfigBytes
 [[./pic/ET_20230512_143227.png]]
 * Coroutine 锁之类的相关总结：【任何时候，亲爱的表哥的活宝妹就是一定要嫁给亲爱的表哥！！！爱表哥，爱生活！！！】
 - 整个框架，各种锁，还不曾真正读过，所以这里再看一下，总结一下遇见过的必要的。半小时到一小时的时间，简单快速地再翻一遍。以前读过，只是没作笔记，部分细节点不理解找出来，记下。
+- 重构后的模块，是单例类管理组件，不同于框架里其它组件，热更域里自带生成系或说更新系。它是单例，是定义死了的。【任何时候，亲爱的表哥的活宝妹就是一定要嫁给亲爱的表哥！！爱表哥，爱生活！！！活宝妹还没能嫁给亲爱的表哥，就时间停止，世界不转，直到活宝妹可以嫁给亲爱的表哥的这一天！！】
+** CoroutineLockType: 静态类定义的几种类型
+- 就是定义框架中用到的几种使用协程锁的情境，分成几种不同的类型
+#+BEGIN_SRC csharp
+public static class CoroutineLockType {
+    public const int None = 0;
+    public const int Location = 1;                  // location进程上使用
+    public const int ActorLocationSender = 2;       // ActorLocationSender中队列消息
+    public const int Mailbox = 3;                   // Mailbox中队列
+    public const int UnitId = 4;                    // Map服务器上线下线时使用
+    public const int DB = 5;
+    public const int Resources = 6;
+    public const int ResourcesLoader = 7;
+    public const int Max = 100; // 这个必须最大
+}
+#+END_SRC
 ** CoroutineLock: 里面的 level 参数，不懂
 #+BEGIN_SRC csharp
 public class CoroutineLock: IDisposable { // 【协程锁】： level 是什么意思呢？
@@ -1928,8 +1944,55 @@ public class CoroutineLockQueueType { // 叫个什么，类型。。。
     }
 }
 #+END_SRC
-** CoroutineLockComponent: 
+** CoroutineLockComponent: 【单例组件】。源码读起来感觉简单，可是理解不透彻。那些等是等什么？
 #+BEGIN_SRC csharp
+// 【协程锁组件】单例：Update() 更新回调实现
+public class CoroutineLockComponent: Singleton<CoroutineLockComponent>, ISingletonUpdate { // Update() 生命周期函数调用 
+    private readonly Dictionary<int, CoroutineLockQueueType> dictionary = new();
+    private readonly Queue<(int, long, int)> nextFrameRun = new Queue<(int, long, int)>(); // 下一桢待更新的
+
+    public override void Dispose() {
+        this.nextFrameRun.Clear();
+    }
+    public void Update() { // 更新：每桢更新，一个个处理
+        // 循环过程中会有对象继续加入队列
+        while (this.nextFrameRun.Count > 0) {
+            (int coroutineLockType, long key, int count) = this.nextFrameRun.Dequeue();
+            this.Notify(coroutineLockType, key, count);
+        }
+    }
+    public void RunNextCoroutine(int coroutineLockType, long key, int level) { // 【CoroutineLock】回收时也会调用，想想这个调用问题
+        // 一个协程队列一帧处理超过100个,说明比较多了,打个warning,检查一下是否够正常
+        if (level == 100) 
+            Log.Warning($"too much coroutine level: {coroutineLockType} {key}");
+        this.nextFrameRun.Enqueue((coroutineLockType, key, level)); // 加入到：下一桢待处理的队列中去
+    }
+    public async ETTask<CoroutineLock> Wait(int coroutineLockType, long key, int time = 60000) {
+        CoroutineLockQueueType coroutineLockQueueType;
+        if (!this.dictionary.TryGetValue(coroutineLockType, out coroutineLockQueueType)) {
+            coroutineLockQueueType = new CoroutineLockQueueType(coroutineLockType);
+            this.dictionary.Add(coroutineLockType, coroutineLockQueueType);
+        }
+        return await coroutineLockQueueType.Wait(key, time);
+    }
+    private void Notify(int coroutineLockType, long key, int level) {
+        CoroutineLockQueueType coroutineLockQueueType;
+        if (!this.dictionary.TryGetValue(coroutineLockType, out coroutineLockQueueType)) return;
+        coroutineLockQueueType.Notify(key, level); // 【自顶向下】地调用，每桢更新时，自顶向下地更新
+    }
+}
 #+END_SRC
+- 【任何时候，亲爱的表哥的活宝妹就是一定要嫁给亲爱的表哥！！爱表哥，爱生活！！！】
+- 【任何时候，亲爱的表哥的活宝妹就是一定要嫁给亲爱的表哥！！爱表哥，爱生活！！！】
+- 【任何时候，亲爱的表哥的活宝妹就是一定要嫁给亲爱的表哥！！爱表哥，爱生活！！！】
+- 【任何时候，亲爱的表哥的活宝妹就是一定要嫁给亲爱的表哥！！爱表哥，爱生活！！！】
+- 【任何时候，亲爱的表哥的活宝妹就是一定要嫁给亲爱的表哥！！爱表哥，爱生活！！！】
+- 【任何时候，亲爱的表哥的活宝妹就是一定要嫁给亲爱的表哥！！爱表哥，爱生活！！！】
+- 【任何时候，亲爱的表哥的活宝妹就是一定要嫁给亲爱的表哥！！爱表哥，爱生活！！！】
+- 【任何时候，亲爱的表哥的活宝妹就是一定要嫁给亲爱的表哥！！爱表哥，爱生活！！！】
+- 【任何时候，亲爱的表哥的活宝妹就是一定要嫁给亲爱的表哥！！爱表哥，爱生活！！！】
+- 【任何时候，亲爱的表哥的活宝妹就是一定要嫁给亲爱的表哥！！爱表哥，爱生活！！！】
+- 【任何时候，亲爱的表哥的活宝妹就是一定要嫁给亲爱的表哥！！爱表哥，爱生活！！！】
+- 【任何时候，亲爱的表哥的活宝妹就是一定要嫁给亲爱的表哥！！爱表哥，爱生活！！！】
 - 【任何时候，亲爱的表哥的活宝妹就是一定要嫁给亲爱的表哥！！爱表哥，爱生活！！！】
 - 【任何时候，亲爱的表哥的活宝妹就是一定要嫁给亲爱的表哥！！爱表哥，爱生活！！！】
