--- a/et4.org
+++ b/et4.org
@@ -761,7 +761,7 @@ public static class NetServerComponentSystem {
 - 【服务端会话框】上的：收到IResponse 回复消息的情况，调用会话框的OnResponse() 方法处理。感觉理解起来困难。觉得服务端应该不会、或是极少出现这种情况吧。感觉更可能是客户端才出现这种情况呀。（服务端的内网回复消息也是有可能的，只是现在想不到例子，或说当服务端实际行驶客户端收返回消息功能的这个功能切分，感觉理解起来困难）
 - 【任何时候，亲爱的表哥的活宝妹就是一定要嫁给亲爱的表哥！！爱表哥，爱生活！！！】
 - 当是回消息IResponse【session.OnResponse(response)】：服务端的会话框上，把回复消息的异步任务的结果写好。这里没弄明白：【写好结果的异步任务，还有任何需要发送的步骤吗？找不到】
-- 其它任何非返回消息：分类处理。今天上午剩余的时候，把剩下几个分类处理的逻辑，看到底，细看一遍。
+n- 其它任何非返回消息：分类处理。今天上午剩余的时候，把剩下几个分类处理的逻辑，看到底，细看一遍。
 #+BEGIN_SRC csharp
 [Event(SceneType.Process)]  // 【进程】层面：来处理这个服务端组件事件
 public class NetServerComponentOnReadEvent: AEvent<NetServerComponentOnRead> {
@@ -809,7 +809,7 @@ public class NetServerComponentOnReadEvent: AEvent<NetServerComponentOnRead> {
 }
 #+END_SRC
 ** NetClientComponent: 【网络客户端】组件：这个，感觉与【服务端】定义申明上看是一样的
-- 【服务端】会话框上收【返回消息】的处理时，直接会话框上返回了返回消息。这里再试着从客户端的角度来找下，有没有相关的逻辑。
+- 【服务端】会话框上收【返回消息】的处理时，直接会话框上返回了返回消息。这里再试着从客户端的角度来找下，有没有相关的逻辑?
 - 以前读框架，边读边打瞌睡，现在读一遍，会感觉收获狠多。所以，今天下午还需要再接着认认真真读几个小时。
 #+BEGIN_SRC csharp
 public struct NetClientComponentOnRead {
@@ -898,6 +898,7 @@ public class NetClientComponentOnReadEvent: AEvent<NetClientComponentOnRead> {
 }
 #+END_SRC
 ** NetInnerComponent: 【服务端】对不同进程的处理组件。是服务器的组件
+- 服务端的内网组件：这个组件，要想一下，同其它组件有什么不同？
 #+BEGIN_SRC java
 namespace ET.Server {
     // 【服务器】：对不同进程的一些处理
