--- a/et4.org
+++ b/et4.org
@@ -757,11 +757,12 @@ public static class NetServerComponentSystem {
 }
    #+END_SRC
 ** NetServerComponentOnReadEvent: NetServerComponent组件，会发布事件，触发此回调类
-- 框架里，是NetServerComponent 会发布此事件，触发这个回调类。去找，有几个订阅者？异步网络消息的发送，与接收，大多都还是单流程，不事分支的，所以全局只有这一个订阅者。
-- 【服务端会话框】上的：收到IResponse 回复消息的情况，调用会话框的OnResponse() 方法处理。感觉理解起来困难。觉得服务端应该不会、或是极少出现这种情况吧。感觉更可能是客户端才出现这种情况呀。（服务端的内网回复消息也是有可能的，只是现在想不到例子，或说当服务端实际行驶客户端收返回消息功能的这个功能切分，感觉理解起来困难）
+- 框架里，是NetServerComponent 会发布此事件，触发这个回调类。去找，有几个订阅者？异步网络消息的发送，与接收，大多都还是单流程，没有分支的，所以全局只有这一个订阅者。
+- 上面的小节，生成系里有发布事件的逻辑。去找：框架里什么地方添加了这些【NetServerComponent服务端】的组件？Realm 注册登录服，和网关服。
+- 【服务端会话框】上的：收到IResponse 回复消息的情况，调用会话框的OnResponse() 方法处理。【感觉理解起来困难。觉得服务端应该不会、或是极少出现这种情况吧。】感觉更可能是客户端才出现这种情况呀。（服务端的内网回复消息也是有可能的，只是现在想不到例子，或说当服务端实际行驶客户端收返回消息功能的这个功能切分，感觉理解起来困难）
 - 【任何时候，亲爱的表哥的活宝妹就是一定要嫁给亲爱的表哥！！爱表哥，爱生活！！！】
 - 当是回消息IResponse【session.OnResponse(response)】：服务端的会话框上，把回复消息的异步任务的结果写好。这里没弄明白：【写好结果的异步任务，还有任何需要发送的步骤吗？找不到】
-n- 其它任何非返回消息：分类处理。今天上午剩余的时候，把剩下几个分类处理的逻辑，看到底，细看一遍。
+- 其它任何非返回消息：分类处理。今天上午剩余的时候，把剩下几个分类处理的逻辑，看到底，细看一遍。
 #+BEGIN_SRC csharp
 [Event(SceneType.Process)]  // 【进程】层面：来处理这个服务端组件事件
 public class NetServerComponentOnReadEvent: AEvent<NetServerComponentOnRead> {
